# hungry

./: Cargo.toml  Makefile  README.md
src/: main.rs
src/clients/: client.rs  ks_client.rs  kwestiasmaku_client.rs  mod.rs  przepisy_client.rs
src/data_sources/: data_source.rs  kwestiasmaku.rs  mod.rs  page_config.rs  przepisy.rs  subpage_config.rs
src/models/: dish_type_enum.rs  menu.rs  mod.rs
src/providers/: ks_provider.rs  kwestiasmaku_provider.rs  menu_item.rs  mod.rs  provider.rs  subpage_config.rs
