[package]
name = "hungry"
version = "0.1.0"
authors = ["szopqa96@gmail.com <szopqa96@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }
scraper = "0.11.0"
regex = "1"
async-trait = "0.1.24"
